--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -s --html=report/report.html --reruns 3
+addopts = -s --alluredir report --html=report/report.html --reruns 3
 testpaths = ./scripts
 python_files = test_*.py
 python_classes = Test*
